fix: custom select in dark/high contrast modes

--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -127,6 +127,7 @@ select[multiple] {
 select:not([multiple]) {
   appearance: none;
   background: no-repeat url("#{map-get( $icons, "select" )}") center right .5em / 1em 1em;
+  color: window;
 }
 
 textarea {
